--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,49 +1,50 @@
 name: Publish
 
 on:
-  push:
-    tags:
-      - 'v*'
+    push:
+        tags:
+            - "v*"
+    workflow_dispatch: # Allows manual triggering
 
 jobs:
-  publish:
-    name: Publish for ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        include:
-          - os: ubuntu-latest
-            asset_name: mergestat-linux-amd64
-          # - os: windows-latest
-          #   asset_name: mergestat-windows-amd64
-          - os: macos-latest
-            asset_name: mergestat-macos-amd64
+    publish:
+        name: Publish for ${{ matrix.os }}
+        runs-on: ${{ matrix.os }}
+        strategy:
+            matrix:
+                include:
+                    - os: ubuntu-latest
+                      asset_name: mergestat-linux-amd64
+                    # - os: windows-latest
+                    #   asset_name: mergestat-windows-amd64
+                    - os: macos-latest
+                      asset_name: mergestat-macos-amd64
 
-    steps:
-    - name: Set up Go 1.19
-      uses: actions/setup-go@v5
-      with:
-        go-version: 1.19.4
-      id: go
+        steps:
+            - name: Set up Go 1.19
+              uses: actions/setup-go@v5
+              with:
+                  go-version: 1.19.4
+              id: go
 
-    - name: Check out source
-      uses: actions/checkout@v4
-      with:
-        submodules: recursive
+            - name: Check out source
+              uses: actions/checkout@v4
+              with:
+                  submodules: recursive
 
-    - name: Install libgit2
-      run: make libgit2
+            - name: Install libgit2
+              run: make libgit2
 
-    - name: Build
-      run: make
+            - name: Build
+              run: make
 
-    - name: Compress
-      run: tar -czvf mergestat.tar.gz -C .build/ .
+            - name: Compress
+              run: tar -czvf mergestat.tar.gz -C .build/ .
 
-    - name: Upload binaries to release
-      uses: svenstaro/upload-release-action@v2
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: mergestat.tar.gz
-        asset_name: ${{ matrix.asset_name }}.tar.gz
-        tag: ${{ github.ref }}
+            - name: Upload binaries to release
+              uses: svenstaro/upload-release-action@v2
+              with:
+                  repo_token: ${{ secrets.GITHUB_TOKEN }}
+                  file: mergestat.tar.gz
+                  asset_name: ${{ matrix.asset_name }}.tar.gz
+                  tag: ${{ github.ref }}
